crates/weft-snapshots/tests/snapshots/a2ui/example-image.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-image as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "avatar"
          ],
          "accessibility": {
            "label": "Profile"
          }
        },
        {
          "id": "avatar",
          "component": "Image",
          "url": {
            "path": "/user/avatar"
          },
          "description": "Profile photo of the user"
        }
      ]
    }
  }
]
