crates/weft-snapshots/tests/snapshots/a2ui/example-link.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-link as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "docs",
            "reset"
          ],
          "accessibility": {
            "label": "Help"
          }
        },
        {
          "id": "docs",
          "component": "Button",
          "child": "docs-label",
          "variant": "borderless",
          "action": {
            "functionCall": {
              "call": "openUrl",
              "args": {
                "url": "https://example.com/help"
              },
              "returnType": "void"
            }
          }
        },
        {
          "id": "docs-label",
          "component": "Text",
          "text": "Read the help center"
        },
        {
          "id": "reset",
          "component": "Button",
          "child": "reset-label",
          "variant": "borderless",
          "action": {
            "event": {
              "name": "nav.reset"
            }
          }
        },
        {
          "id": "reset-label",
          "component": "Text",
          "text": "Forgot password?"
        }
      ]
    }
  }
]
