crates/weft-snapshots/tests/snapshots/a2ui/example-model.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-model as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [],
          "accessibility": {
            "label": "Showroom"
          }
        }
      ]
    }
  }
]
